# flask_mail

./: app.py  pyproject.toml
templates/mail/: welcome.html
