[tool.poetry]
name = "flask-mail"
version = "0.1.0"
description = ""
authors = ["Leo Graciano <leonardoferreiragraciano@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_mail"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"




[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
